# machine-notes

./: .gitignore  .mcp.json  Claude.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/arxiv-doc-builder/: SKILL.md  pyproject.toml
.claude/skills/arxiv-doc-builder/arxiv_doc_builder/: convert_pdf_simple.py
archive/kromhc_transformer/: __init__.py  data.py
chat/: chat.py  chat_utils.py
chat/tests/: test_chat_utils.py
flow_matching/: config.py  data.py  model.py  sample.py  train.py
flow_matching/configs/: dit_cfg.yaml  dit_muon.yaml  dit_small.yaml
grokking/: README.md  config.py  data.py  model.py  train.py
grokking/configs/: adamw_add.yaml  (+1 more)
hyberbolic_embeddings/: HYPERBOLIC_EXPERIMENT_PLAN.md  hyperbolic_validation_plan.md
hyvit/: README.md  config.py  requirements.txt  train.py  train_lm.py
idlm/: README.md  __init__.py  __main__.py  chat.py  chat_utils.py  config.py  data.py  generate.py  train.py
kromhc_transformer/: config.py  data_cache  findings.md  train.py
mamba_lm/: README.md  config.py  data.py  train.py
medusa/: cache.py  config.py  data.py  train.py
mtp_draft/: README.md  cache.py  config.py  data.py  train.py  tree.py
rbf_ffn/: OVERVIEW.md  README.md  _leaderboard_data.py  config.py  count_params.py  data.py  findings.md  generate_leaderboard_html.py  leaderboard.html  leaderboard.py  plot_wnorm_comparison.py  plot_wnorm_per_arch.py  probe_ffn_alignment.py  probe_moe_cosine.py  probe_oss_moe_cosine.py  train.py
sigreg/: README.md  config.py  data.py  losses.py  train.py
wiki/: SCHEMA.md  index.md  log.md
(+361 files in other folders)
