[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rbf-ffn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rbf_ffn*", "kromhc_transformer*", "grokking*"]

[tool.pytest.ini_options]
testpaths = ["rbf_ffn/tests", "kromhc_transformer/tests", "grokking/tests"]
