[project]
name = "arxiv-doc-builder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
convert-paper = "arxiv_doc_builder.convert_paper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_doc_builder"]
